; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/rtsp/extr_rtsp_reader.c_rtsp_blocking_track_read.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/rtsp/extr_rtsp_reader.c_rtsp_blocking_track_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VC_CONTAINER_ERROR_ABORTED = common dso_local global i64 0, align 8
@VC_CONTAINER_CONTROL_IO_SET_READ_TIMEOUT_MS = common dso_local global i32 0, align 4
@VC_CONTAINER_READ_TIMEOUT_BLOCK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i32)* @rtsp_blocking_track_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rtsp_blocking_track_read(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i64 @vc_container_read(i32* %8, i32* %9, i32 %10)
  store i64 %11, i64* %7, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* @VC_CONTAINER_ERROR_ABORTED, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %27

15:                                               ; preds = %3
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* @VC_CONTAINER_CONTROL_IO_SET_READ_TIMEOUT_MS, align 4
  %18 = load i32, i32* @VC_CONTAINER_READ_TIMEOUT_BLOCK, align 4
  %19 = call i32 @vc_container_control(i32* %16, i32 %17, i32 %18)
  %20 = load i32*, i32** %4, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i64 @vc_container_read(i32* %20, i32* %21, i32 %22)
  store i64 %23, i64* %7, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* @VC_CONTAINER_CONTROL_IO_SET_READ_TIMEOUT_MS, align 4
  %26 = call i32 @vc_container_control(i32* %24, i32 %25, i32 0)
  br label %27

27:                                               ; preds = %15, %3
  %28 = load i64, i64* %7, align 8
  ret i64 %28
}

declare dso_local i64 @vc_container_read(i32*, i32*, i32) #1

declare dso_local i32 @vc_container_control(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
